Fix 'Whats New' card spacing

--- a/style.css
+++ b/style.css
@@ -25,6 +25,27 @@ ul {
     display: flex;
 }
 
+.animated:hover {
+    animation-name: var(shake);
+    animation-duration: 0.5s;
+    animation-iteration-count: infinite;
+    cursor: pointer;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(1px, 1px) rotate(1deg); }
+    30% { transform: translate(-3px, 0px) rotate(0deg); }
+    40% { transform: translate(3px, 2px) rotate(1deg); }
+    50% { transform: translate(1px, -1px) rotate(-1deg); }
+    60% { transform: translate(-1px, 2px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 /* HEADER ----------------------------- */
 
 .header {
@@ -237,8 +258,8 @@ ul {
 }
 
 .cardInner {
-    margin: 24px;
-    height: 32%;
+    margin: 30px;
+    height: 30%;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     /* flexbox */
@@ -265,5 +286,5 @@ ul {
 }
 
 .card:hover .cardLink {
-    color: #008b47;
+    color: #5c5c5c;
 }
